--- a/src/main/resources/com/example/plantwidget_g18_gui/SeedMenu.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/SeedMenu.fxml
@@ -185,6 +185,12 @@
          </font>
       </Button>
       <Button fx:id="enterNameButton" layoutX="365.0" layoutY="183.0" mnemonicParsing="false" onAction="#plantSeedOne" text="enter" visible="false" />
+      <ImageView fitHeight="60.0" fitWidth="68.0" layoutX="8.0" layoutY="335.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/quest1.png" />
+         </image>
+      </ImageView>
+      <JFXButton buttonType="RAISED" layoutX="8.0" layoutY="334.0" onAction="#openPopUpSeed" prefHeight="60.0" prefWidth="60.0" ripplerFill="#3f9a3b" text="." textFill="#2ec9a0" />
    </children>
    <effect>
       <Glow />
